--- a/MyRental.Blazor/_Imports.razor
+++ b/MyRental.Blazor/_Imports.razor
@@ -12,9 +12,9 @@
 @using MyRental.Blazor
 @using MyRental.Blazor.Authentication
 @using MyRental.Blazor.Shared
-@using MyRental.Services.Areas.Ads
-@using MyRental.Services.Areas.Ads.Dto
-@using MyRental.Services.Areas.Ads.Validators
+@using MyRental.Services.Areas.Advertisements
+@using MyRental.Services.Areas.Advertisements.Dto
+@using MyRental.Services.Areas.Advertisements.Validators
 @using MyRental.Services.Areas.Medias.Dto
 @using MyRental.Services.Areas.Notifications
 @using MyRental.Services.Areas.Notifications.Data
