--- a/MyRental.Blazor/Pages/User/Account.razor
+++ b/MyRental.Blazor/Pages/User/Account.razor
@@ -5,7 +5,7 @@
 @inject AuthenticationStateProvider AuthProvider
 @inject IJSRuntime Js
 @inject IUserService UserService
-@inject IAdService AdService
+@inject IAdvertisementService AdvertisementService
 
 <PageTitle>Account page</PageTitle>
 
@@ -38,7 +38,7 @@ else
                 <h2 class="text-start">Your ads</h2>
             </div>
             <div class="col-6 text-end">
-                <a href="/ads/create/@_userId"><button style="width: 40px" class="btn btn-success"><i class="bi bi-plus-circle"></i></button></a>
+                <a href="/advertisements/create/@_userId"><button style="width: 40px" class="btn btn-success"><i class="bi bi-plus-circle"></i></button></a>
             </div>
         </div>
 
@@ -60,8 +60,8 @@ else
                     <td>@ad.Area</td>
                     <td>@ad.Title</td>
                     <td>@ad.Price</td>
-                    <td><a href="/ads/@ad.Id"><button class="btn btn-info auto-width"><i class="bi bi-three-dots"></i></button></a></td>
-                    <td><a href="/ads/edit/@_userId/@ad.Id"><button class="btn btn-primary auto-width"><i class="bi bi-pencil-square"></i></button></a></td>
+                    <td><a href="/advertisements/@ad.Id"><button class="btn btn-info auto-width"><i class="bi bi-three-dots"></i></button></a></td>
+                    <td><a href="/advertisements/edit/@_userId/@ad.Id"><button class="btn btn-primary auto-width"><i class="bi bi-pencil-square"></i></button></a></td>
                     <td><button class="btn btn-danger auto-width" @onclick="() => DeleteAdByIdAsync(ad.Id)"><i class="bi bi-trash-fill"></i></button></td>
                 </tr>
             }
@@ -74,7 +74,7 @@ else
 {
     int _userId;
     UserDto? _user;
-    IList<AdDto>? _ads;
+    IList<AdvertisementDto>? _ads;
 
     protected override async Task OnInitializedAsync()
     {
@@ -92,14 +92,14 @@ else
             await myProvider.LogoutAsync();
         }
         
-        _ads = await AdService.GetUserListAsync(_userId);
+        _ads = await AdvertisementService.GetListAsync(new AdvertisementFilterDto{UserId = _userId});
     }
 
     private async Task DeleteAdByIdAsync(int id)
     {
         try
         {
-            await AdService.DeleteByIdAsync(id);
+            await AdvertisementService.DeleteByIdAsync(id);
         }
         catch (Exception e)
         {
