--- a/MyRental.Blazor/_Imports.razor
+++ b/MyRental.Blazor/_Imports.razor
@@ -15,6 +15,7 @@
 @using MyRental.Services.Areas.Advertisements
 @using MyRental.Services.Areas.Advertisements.Dto
 @using MyRental.Services.Areas.Advertisements.Validators
+@using MyRental.Services.Areas.Auth
 @using MyRental.Services.Areas.Medias.Dto
 @using MyRental.Services.Areas.Notifications
 @using MyRental.Services.Areas.Notifications.Data
