--- a/MyRental.Blazor/Pages/Advertisement/Edit.razor
+++ b/MyRental.Blazor/Pages/Advertisement/Edit.razor
@@ -1,25 +1,26 @@
-﻿@page "/ads/create/{UserId:int}"
+﻿@page "/advertisements/edit/{UserId:int}/{AdvertisementId:int}"
 
 @attribute [Authorize]
 
 @inject IJSRuntime Js
 @inject NavigationManager NavManager
-@inject IAdService AdService
+@inject IMapper Mapper
+@inject IAdvertisementService AdvertisementService
 
-<PageTitle>Create Advertisement</PageTitle>
+<PageTitle>Edit</PageTitle>
 
-<h1>Create</h1>
+<h1>Edit</h1>
 <br/>
 
-<EditForm Model="_adInput">
+<EditForm Model="_advertisementInput">
     <div class="text-center">
-        @if (_adInput.Medias != null && _adInput.Medias.Any())
+        @if (_advertisementInput.Medias != null && _advertisementInput.Medias.Any())
         {
             <table class="table-hover">
                 <thead class="custom">
                 <tr>
                     <th>
-                        <img src="@_adInput.Medias.ElementAt(_currentMedia).Data" alt="Photo"/>
+                        <img src="@_advertisementInput.Medias.ElementAt(_currentMedia).Data" alt="Photo"/>
                     </th>
                 </tr>
                 </thead>
@@ -48,7 +49,7 @@
                 <th>
                     <div>
                         <label for="Country">Country</label>
-                        <InputSelect class="form-select text-start" id="Country" @bind-Value="_adInput.Country" @oninput="FindCities">
+                        <InputSelect class="form-select text-start" id="Country" @bind-Value="_advertisementInput.Country" @oninput="FindCities">
                             @if (_countries == null)
                             {
                                 <option value="">Loading...</option>
@@ -67,27 +68,33 @@
                 <th>
                     <div>
                         <label for="City">City</label>
-                        <InputSelect class="form-select text-start" id="City" @bind-Value="_adInput.City" disabled="@_isCityDisabled">
-                            @if (_isCityDisabled)
+                        <InputSelect class="form-select text-start" id="City" @bind-Value="_advertisementInput.City" disabled="@_isCityDisabled">
+                            @if (_cities == null)
                             {
-                                <option value="">Choose country</option>
+                                <option value="">Loading...</option>
                             }
                             else
                             {
-                                <option value="">Cities</option>
-                                @foreach (var city in _cities)
+                                @if (_isCityDisabled)
                                 {
-                                    <option value="@city">@city</option>
+                                    <option value="">Choose country</option>
+                                }
+                                else
+                                {
+                                    <option value="">Cities</option>
+                                    @foreach (var city in _cities)
+                                    {
+                                        <option value="@city">@city</option>
+                                    }
                                 }
                             }
-                            
                         </InputSelect>
                     </div>
                 </th>
                 <th>
                     <div>
                         <label for="Area">Area</label>
-                        <InputText class="form-control" id="Area" @bind-Value="_adInput.Area"></InputText>
+                        <InputText class="form-control" id="Area" @bind-Value="_advertisementInput.Area"></InputText>
                     </div>
                 </th>
             </tr>
@@ -100,19 +107,19 @@
                 <th>
                     <div>
                         <label for="Rooms">Rooms</label>
-                        <InputNumber class="form-control" id="Rooms" @bind-Value="_adInput.Rooms"></InputNumber>
+                        <InputNumber class="form-control" id="Rooms" @bind-Value="_advertisementInput.Rooms"></InputNumber>
                     </div>
                 </th>
                 <th>
                     <div>
                         <label for="Square">Square</label>
-                        <InputNumber class="form-control" id="Square" @bind-Value="_adInput.Square"></InputNumber>
+                        <InputNumber class="form-control" id="Square" @bind-Value="_advertisementInput.Square"></InputNumber>
                     </div>
                 </th>
                 <th>
                     <div>
                         <label for="Price">Price</label>
-                        <InputNumber class="form-control" id="Price" @bind-Value="_adInput.Price"></InputNumber>
+                        <InputNumber class="form-control" id="Price" @bind-Value="_advertisementInput.Price"></InputNumber>
                     </div>
                 </th>
             </tr>
@@ -125,13 +132,13 @@
                 <th>
                     <div>
                         <label for="Title">Title</label>
-                        <InputTextArea class="form-control w-100" id="Title" @bind-Value="_adInput.Title"></InputTextArea>
+                        <InputTextArea class="form-control w-100" id="Title" @bind-Value="_advertisementInput.Title"></InputTextArea>
                     </div>
                 </th>
                 <th>
                     <div>
                         <label for="Description">Description</label>
-                        <InputTextArea class="form-control w-100" id="Description" @bind-Value="_adInput.Description"></InputTextArea>
+                        <InputTextArea class="form-control w-100" id="Description" @bind-Value="_advertisementInput.Description"></InputTextArea>
                     </div>
                 </th>
             </tr>
@@ -142,7 +149,7 @@
         
         <div class="text-center">
             <a href="/user/account"><button class="btn btn-info auto-width"><i class="bi bi-arrow-bar-left"></i></button></a>
-            <button class="btn btn-success auto-width" @onclick="CreateAsync"><i class="bi bi-check-square"></i></button>
+            <button class="btn btn-primary auto-width" @onclick="UpdateAsync"><i class="bi bi-pencil-square"></i></button>
         </div>
     </div>
 </EditForm>
@@ -152,52 +159,49 @@
     [Parameter]
     public int UserId { get; set; }
     
-    readonly AdDtoInput _adInput = new();
-    private int _adId;
-    
+    [Parameter]
+    public int AdvertisementId { get; set; }
+
+    readonly AdvertisementDtoInput _advertisementInput = new();
+    AdvertisementDto? _adDto;
     List<string>? _countries;
-    bool _isCityDisabled = true;
     List<string>? _cities;
-    
+    bool _isCityDisabled;
     int _currentMedia;
 
     protected override async Task OnInitializedAsync()
     {
-        _adInput.Medias = new List<MediaDtoInput>();
+        _adDto = await AdvertisementService.GetByIdAsync(AdvertisementId);
+        Mapper.Map(_adDto, _advertisementInput);
+
         await FindCountriesAsync();
+        InitCities();
 
         _currentMedia = 0;
     }
 
-    private async Task CreateAsync()
+    private async Task UpdateAsync()
     {
         try
         {
-            _adInput.UserId = UserId;
-            _adInput.CreatedDate = DateTime.Now;
+            _advertisementInput.UserId = UserId;
+            _advertisementInput.CreatedDate = DateTime.Now;
 
-            var result = await new AdDtoInputValidator().ValidateAsync(_adInput);
+            var result = await new AdvertisementDtoInputValidator().ValidateAsync(_advertisementInput);
             if (!result.IsValid)
             {
-                var message = result.Errors
-                    .Aggregate("", (current, error) => current + error.ErrorMessage);
-                
+                var message = result.Errors.Aggregate("", (current, error) => current + error.ErrorMessage);
                 throw new Exception(message);
             }
-            
-            _adId = await AdService.CreateAsync(_adInput);
-
-            foreach (var media in _adInput.Medias)
-            {
-                media.AdId = _adId;
-            }
-            
-            NavManager.NavigateTo($"/user/account");
+            await AdvertisementService.UpdateByIdAsync(AdvertisementId, _advertisementInput);
         }
         catch (Exception e)
         {
             await Js.InvokeVoidAsync("alert", e.Message);
+            return;
         }
+        
+        NavManager.NavigateTo("/user/account");
     }
     
     async Task OnFileChangeAsync(InputFileChangeEventArgs e)
@@ -212,24 +216,33 @@
 
         var file = new MediaDtoInput
         {
+            AdvertisementId = AdvertisementId,
             Data = imageData,
             Name = nameAndExtension[0],
             Extension = nameAndExtension[1]
         };
         
-        _adInput.Medias.Add(file);
+        _advertisementInput.Medias.Add(file);
 
-        _currentMedia = _adInput.Medias.Count - 1;
+        _currentMedia = _advertisementInput.Medias.Count - 1;
     }
-    
+
     void DeleteFile(int id)
     {
-        var file = _adInput.Medias.ElementAt(id);
-        _adInput.Medias.Remove(file);
+        var file = _advertisementInput.Medias.ElementAt(id);
+        _advertisementInput.Medias.Remove(file);
 
         ShowPreviousMedia();
     }
-
+    
+    private void InitCities()
+    {
+        _cities = File.ReadLines("D:\\Programming\\Projects\\my-rental\\MyRental.Infrastructure\\Enums\\Cities.txt")
+            .Where(city => city.EndsWith($"{_adDto.Country}"))
+            .OrderBy(city => city[0])
+            .ToList();
+    }
+    
     private async Task FindCountriesAsync()
     {
         var countries = await File.ReadAllLinesAsync("D:\\Programming\\Projects\\my-rental\\MyRental.Infrastructure\\Enums\\Countries.txt");
@@ -238,7 +251,7 @@
 
     private void FindCities(ChangeEventArgs e)
     {
-        _adInput.City = "";
+        _advertisementInput.City = "";
         
         _isCityDisabled = e.Value.Equals("");
         if (_isCityDisabled) return;
@@ -251,11 +264,11 @@
     
     private void ShowPreviousMedia()
     {
-        _currentMedia = _currentMedia == 0 ? _adInput.Medias.Count - 1 : _currentMedia -= 1;
+        _currentMedia = _currentMedia == 0 ? _advertisementInput.Medias.Count - 1 : _currentMedia -= 1;
     }
 
     private void ShowNextMedia()
     {
-        _currentMedia = _currentMedia == _adInput.Medias.Count - 1 ? 0 : _currentMedia += 1;
+        _currentMedia = _currentMedia == _advertisementInput.Medias.Count - 1 ? 0 : _currentMedia += 1;
     }
 }
